--- a/app/views/villes/show.html.erb
+++ b/app/views/villes/show.html.erb
@@ -28,7 +28,9 @@
 <p>
   <strong>Temperature :</strong>
   <% if @weatherTemperature %>
-    <%= '%.2f' % @weatherTemperature %> &deg;C
+    <span class="<%= @temperatureColor %>">
+      <%= '%.2f' % @weatherTemperature %> &deg;C
+    </span>
   <% else %>
   Unavailable
   <% end %>
