--- a/app/views/villes/index.html.erb
+++ b/app/views/villes/index.html.erb
@@ -1,12 +1,14 @@
 <h1>Listing villes</h1>
 
-<table>
+<table id="table">
   <thead>
     <tr>
       <th>Nom</th>
       <th>Latitude</th>
       <th>Longitude</th>
-      <th colspan="3"></th>
+      <th></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -27,3 +29,8 @@
 <br>
 
 <%= link_to 'New Ville', new_ville_path %>
+<script>
+  $(document).ready(function(){
+    $('#table').DataTable();
+}); 
+</script>
